--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TopNotch Accounting Services - Online Bookkeeping for Small Businesses</title>
+    <title>TopNotch Solutions - Online Bookkeeping for Small Businesses</title>
     <meta name="description" content="Professional online bookkeeping services for small businesses. Accurate, CPA-ready financials from certified QuickBooks and Xero experts. Flat pricing, no contracts." />
-    <meta name="author" content="TopNotch Accounting Services" />
+    <meta name="author" content="TopNotch Solutions" />
 
-    <meta property="og:title" content="TopNotch Accounting Services - Online Bookkeeping for Small Businesses" />
+    <meta property="og:title" content="TopNotch Solutions - Online Bookkeeping for Small Businesses" />
     <meta property="og:description" content="Professional online bookkeeping services for small businesses. Accurate, CPA-ready financials from certified QuickBooks and Xero experts. Flat pricing, no contracts." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
